2008-01-05  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/debug-manager/debug_tree.c,
	plugins/debug-manager/debug_tree.h,
	plugins/debug-manager/watch.c,
	plugins/debug-manager/command.c,
	plugins/debug-manager/queue.c,
	plugins/gdb/plugin.c,
	plugins/gdb/debugger.c,
	plugins/gdb/debugger.h,
	libanjuta/interfaces/libanjuta.idl:
	Rename IAnjutaVariableDebugger to IAnjutaDebuggerVariable

2008-01-05  Naba Kumar  <naba@gnome.org>

	* plugins/valgrind/plugin.c: Removed stock icon open/save from
	menus to avoid conflict with file open/save. Fixes bug #507455

2008-01-05  Johannes Schmid <jhs@gnome.org>

	* configure.in:
	Conditionally depend on gtksourceview2 >= 2.1.0
	
	* libanjuta/interfaces/libanjuta.idl:
	Update IAnjutaEditorSeletion and IAnjutaEditorHover to use
	iterators instead of positions
	
	* plugins/debug-manager/threads.c:
	Fixed a warnings by including gnome-vfs properly
	
	* plugins/debug-manager/variable.c: (get_hovered_word),
	(on_hover_over):
	Updated to changes in IAnjutaEditorHover/Selection
	
	* plugins/document-manager/action-callbacks.c:
	(on_editor_command_upper_case_activate),
	(on_editor_command_lower_case_activate):
	* plugins/document-manager/search-box.c: (on_incremental_search),
	(on_search_activated):
	* plugins/editor/text_editor.c: (itext_editor_get_text_iter),
	(itext_editor_erase), (itext_editor_iface_init), (iselection_set),
	(iselection_get_start), (iselection_get_end),
	(iselection_iface_init), (ihover_display), (ihover_iface_init):
	* plugins/editor/text_editor_cbs.c:
	(on_text_editor_scintilla_notify):
	
	Updated to changes in IAnjutaEditorHover/Selection and updated editor
	interface of scintilla editor.
	
	* plugins/language-manager/languages.xml:
	* plugins/language-manager/plugin.c:
	(ilanguage_get_from_mime_type), (ilanguage_get_from_string):
	Added chdr to C language files and some DEBUG_PRINTs
	
	* plugins/language-support-cpp-java/cpp-java-assist.c:
	(on_assist_chosen):